[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/UI scenes/Main_Menu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -123.0
margin_right = 244.0
margin_bottom = -55.0

[node name="start_game_button" type="Button" parent="VBoxContainer"]
margin_right = 194.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../Quit_game_button")
text = "New Game"

[node name="resume_game_button" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 194.0
margin_bottom = 44.0
text = "Continue Game"

[node name="Quit_game_button" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 194.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../start_game_button")
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/start_game_button" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/resume_game_button" to="." method="_on_resume_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_game_button" to="." method="_on_Quit_game_button_pressed"]
